# aetolia_bookworm

./: Cargo.toml
src/: add_posts.rs  aetolia_api.rs  cli.rs  collection.rs  embedding_utils.rs  jina_api.rs  main.rs  mistral_api.rs  prelude.rs  qdrant_utils.rs
