[package]
name = "aetolia_bookworm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
mistralai-client = { path = "../mistralai-client-rs" }
qdrant-client = "1.9.0"
serde = "1"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tonic = "0.11.0"
reqwest = "0.12"
clap = { verison = "4.5.4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }